# ft_cloc

./: .editorconfig  .gitignore  README.md  flake.nix  meson.build  version.vala.in
src/: file_children.vala  ft_cloc.vala  main.vala
